--- a/scss/globals/_colors.scss
+++ b/scss/globals/_colors.scss
@@ -1,11 +1,17 @@
 :root {
     --clr-black-primary: hsl(0, 0%, 15%);
     --clr-white-primary: hsl(0, 0%, 100%);
+
     --clr-lilac-bg: hsl(255, 69%, 90%);
     --clr-lilac-dark: hsl(254, 100%, 89%);
+    --clr-lilac-dark-button: hsl(254, 78%, 75%);
     --clr-lilac-dark-blur: hsl(255, 100%, 88%, .9);
+
     --clr-green-bg: hsl(151, 74%, 88%);
-    --clr-pink-bg: hsl(0, 77%, 85%);
+
+    --clr-pink-bg: hsl(0, 86%, 89%);
+    --clr-pink-dark-button: hsl(0, 73%, 77%);
+    
     --clr-blue-bg: hsl(215, 94%, 86%);
     --clr-blue-dark: hsl(215, 68%, 41%);
 }
