--- a/scss/layouts/_projects.scss
+++ b/scss/layouts/_projects.scss
@@ -3,6 +3,7 @@
 
 .projects {
     background-color: var(--clr-blue-bg);
+    padding-bottom: 3rem;
 
     &__picture {
         margin: 1.5rem 2.5rem;
