added navbar links animation

--- a/css/style.css
+++ b/css/style.css
@@ -299,8 +299,29 @@ ul {
   }
 }
 
+.primary-nav__link {
+  position: relative;
+}
+
 .primary-nav__link:hover {
   color: var(--clr-white-primary);
+}
+
+.primary-nav__link::after {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  width: 100%;
+  left: 0;
+  height: 2px;
+  background: var(--clr-white-primary);
+  transform: scaleX(0);
+  transform-origin: center;
+  transition: transform 0.25s ease-in-out;
+}
+
+.primary-nav__link:hover::after {
+  transform: scaleX(1);
 }
 
 .mobile-nav-toggle {
@@ -570,6 +591,7 @@ ul {
   margin: 2rem 2.5rem;
   width: 100%;
   border-radius: 5px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 }
 @media (min-width: 37em) {
   .contact__container {
