--- a/scss/layouts/_contact.scss
+++ b/scss/layouts/_contact.scss
@@ -33,6 +33,7 @@
         margin: 2rem 2.5rem;
         width: 100%;
         border-radius: 5px;
+        box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
         
 
         @include u.breakpoint(medium) {
