--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -10,6 +10,7 @@
 }
 
 .button {
+    color: var(--clr-black-primary);;
     margin: 0 1.5rem;
     padding: .5rem 1.1rem; 
     outline: none;
@@ -33,8 +34,10 @@
 }
 
 .button--about:hover,
-.button--contact:hover {
+.button--contact:hover,
+.button--projects:hover {
     color: var(--clr-white-primary);
+    transform: scale(1.05) translateY(-.125em);
     
 }
 
@@ -66,11 +69,15 @@
 }
 
 .button--projects {
+    text-transform: uppercase;
+    letter-spacing: 1px;
     border: 1px solid var(--clr-black-primary);
+    background-color: var(--clr-blue-bg);
     padding: .5rem 1rem;
     border-radius: 5px;
     font-size: .9rem;
     position: relative;
+    transition: .2s ease-in-out 0s;
 
     @include u.breakpoint(medium) {
         font-size: 1rem;
@@ -88,8 +95,8 @@
 
 
 .button--projects:hover {
-    color: var(--clr-white-primary);
     border: 1px solid var(--clr-black-primary);
     background-color: var(--clr-black-primary);
+    
     
 }
