changed project titles font

--- a/scss/layouts/_projects.scss
+++ b/scss/layouts/_projects.scss
@@ -42,7 +42,8 @@
     
 
     &__title {
-        font-family: var(--vollkron-font);
+        font-family: var(--public-sans-font);
+        font-weight: bold;
         font-size: 1.7rem;
         padding: 0 2.5rem;
 
