--- a/css/style.css
+++ b/css/style.css
@@ -488,7 +488,8 @@ ul {
   }
 }
 .projects__title {
-  font-family: var(--vollkron-font);
+  font-family: var(--public-sans-font);
+  font-weight: bold;
   font-size: 1.7rem;
   padding: 0 2.5rem;
 }
