--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,36 @@ ul {
     font-size: 1.3rem;
   }
 }
+.header__paragraph--scroll {
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  opacity: 0.3;
+  margin-top: 9rem;
+  display: inline-block;
+}
+@media (min-width: 37em) {
+  .header__paragraph--scroll {
+    display: none;
+  }
+}
+
+.container__scroll {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 20px;
+}
+
+.span--scroll {
+  display: inline-block;
+}
+
+.scroll-icon {
+  max-width: 1.3rem;
+  margin: 0 auto;
+  margin-top: 2rem;
+  opacity: 0.8;
+}
 
 .header__name {
   font-weight: 600;
