--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -35,7 +35,44 @@
             font-size: 1.3rem;
         }
     }
+
+    &__paragraph--scroll {
+        text-transform: uppercase;
+        font-size: .8rem;
+        opacity: .3;
+        margin-top: 9rem;
+        display: inline-block;
+    
+        
+        
+        
+
+        @include u.breakpoint(medium) {
+            display: none;
+        }
+    }
 }
+
+.container__scroll {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right: 20px;
+}
+
+.span--scroll {
+    display: inline-block;
+    
+}
+
+
+.scroll-icon {
+    max-width: 1.3rem;
+    margin: 0 auto;
+    margin-top: 2rem;
+    opacity: .8;
+}
+
 
 .header__name {
     font-weight: 600;
