--- a/css/style.css
+++ b/css/style.css
@@ -239,10 +239,13 @@ ul {
 }
 
 .container__scroll {
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-right: 20px;
+  left: 0;
+  right: 0;
+  margin-top: 20rem;
 }
 
 .span--scroll {
@@ -252,7 +255,7 @@ ul {
 .scroll-icon {
   max-width: 1.3rem;
   margin: 0 auto;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   opacity: 0.8;
 }
 
