--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -54,10 +54,14 @@
 }
 
 .container__scroll {
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-right: 20px;
+    left: 0;
+    right: 0;
+    margin-top: 20rem;
+    
 }
 
 .span--scroll {
@@ -69,7 +73,7 @@
 .scroll-icon {
     max-width: 1.3rem;
     margin: 0 auto;
-    margin-top: 2rem;
+    margin-top: 1.5rem;
     opacity: .8;
 }
 
