--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ ul {
   line-height: 2.3rem;
   margin-bottom: 2rem;
   font-family: var(--vollkron-font);
-  padding: 0 2.5rem;
+  padding: 0 2.2rem;
 }
 @media (min-width: 37em) {
   .section__title {
@@ -98,7 +98,7 @@ ul {
 .section__text {
   max-width: 65ch;
   font-size: 1.1rem;
-  padding: 0.2rem 2.5rem;
+  padding: 0.2rem 2.2rem;
   margin: 1rem 0;
 }
 @media (min-width: 37em) {
@@ -502,7 +502,7 @@ ul {
 .projects__text {
   max-width: 65ch;
   font-size: 1.2rem;
-  padding: 0.2rem 2.5rem;
+  padding: 0.2rem 2.2rem;
   margin: 1rem 0;
 }
 .projects__secondary {
@@ -526,7 +526,7 @@ ul {
   font-family: var(--public-sans-font);
   font-weight: bold;
   font-size: 1.7rem;
-  padding: 0 2.5rem;
+  padding: 0 2.2rem;
 }
 @media (min-width: 48em) {
   .projects__title {
@@ -543,6 +543,7 @@ ul {
 @media (min-width: 48em) {
   .projects__text-wrapper {
     grid-area: text;
+    margin-top: 1.6rem;
   }
 }
 @media (min-width: 48em) {
@@ -568,10 +569,16 @@ ul {
 .projects__name {
   color: var(--clr-blue-dark);
 }
+.projects__name:hover {
+  border-bottom: 1px solid var(--clr-blue-dark);
+}
 
 .wrapper--projects {
   max-width: 73rem;
   margin-bottom: 6rem;
+}
+.wrapper--projects-row {
+  margin-bottom: 3rem;
 }
 
 .grid__block {
@@ -580,7 +587,7 @@ ul {
 }
 @media (min-width: 48em) {
   .grid__block {
-    margin-top: 5rem;
+    margin-top: 4.2rem;
     grid-template-areas: "image image image image text" "image image image image icons";
   }
 }
@@ -606,7 +613,7 @@ ul {
 @media (min-width: 48em) {
   .projects-wrapper--modified {
     padding: 0;
-    margin: 1.5rem 0 0 1.5rem;
+    margin: 2.5rem 0 0 1.5rem;
   }
 }
 
