add geo-countries to project section

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,8 @@ body {
   color: var(--clr-black-primary);
 }
 
-a {
+a,
+.a:visited {
   color: var(--clr-black-primary);
 }
 
@@ -117,7 +118,8 @@ ul {
   text-align: end;
 }
 
-.button {
+.button,
+.button:focus {
   color: var(--clr-black-primary);
   margin: 0 1.5rem;
   padding: 0.5rem 1.1rem;
@@ -128,11 +130,13 @@ ul {
   letter-spacing: 0.08rem;
   transition: 0.2s ease-in-out 0s;
 }
-.button--about {
+.button--about,
+.button:focus--about {
   color: var(--clr-black-primary);
   background-color: var(--clr-lilac-dark);
 }
-.button--contact {
+.button--contact,
+.button:focus--contact {
   color: var(--clr-black-primary);
   background-color: var(--clr-pink-bg);
   padding: 0.5rem 2rem;
