--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -9,7 +9,8 @@
     }
 }
 
-.button {
+.button,
+.button:focus {
     color: var(--clr-black-primary);;
     margin: 0 1.5rem;
     padding: .5rem 1.1rem; 
