--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,26 @@ ul {
     font-size: 4rem;
   }
 }
+@media (max-height: 38.125em) {
+  .header__title {
+    margin-top: 2.5rem;
+    font-size: 3.2rem;
+  }
+}
+.header__name {
+  font-weight: 600;
+  font-size: 2.7rem;
+}
+@media (min-width: 37em) {
+  .header__name {
+    font-size: 4.2rem;
+  }
+}
+@media (max-height: 38.125em) {
+  .header__name {
+    font-size: 3.4rem;
+  }
+}
 .header__paragraph {
   margin-top: 10px;
   padding: 0 15px 0 15px;
@@ -238,6 +258,11 @@ ul {
     display: none;
   }
 }
+@media (max-height: 38.125em) {
+  .header__paragraph--scroll {
+    display: block;
+  }
+}
 
 .container__scroll {
   position: absolute;
@@ -246,7 +271,7 @@ ul {
   align-items: center;
   left: 0;
   right: 0;
-  margin-top: 20rem;
+  margin-top: 19rem;
 }
 
 .span--scroll {
@@ -256,17 +281,12 @@ ul {
 .scroll-icon {
   max-width: 1.3rem;
   margin: 0 auto;
-  margin-top: 1.5rem;
+  margin-top: 1rem;
   opacity: 0.8;
 }
-
-.header__name {
-  font-weight: 600;
-  font-size: 2.7rem;
-}
-@media (min-width: 37em) {
-  .header__name {
-    font-size: 4.2rem;
+@media (max-height: 38.125em) {
+  .scroll-icon {
+    margin-top: 0.3rem;
   }
 }
 
