--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -72,7 +72,7 @@
     letter-spacing: 1px;
     border: 1px solid var(--clr-black-primary);
     background-color: var(--clr-blue-bg);
-    padding: .5rem 1rem;
+    padding: .5rem .8rem;
     border-radius: 5px;
     font-size: .9rem;
     position: relative;
