--- a/scss/globals/_colors.scss
+++ b/scss/globals/_colors.scss
@@ -1,11 +1,15 @@
 :root {
     --clr-black-primary: hsl(0, 0%, 15%);
     --clr-white-primary: hsl(0, 0%, 100%);
+    --clr-neutral-light: hsl(0, 0%, 94%);
+    --clr-neutral-dark: hsl(0, 0%, 47%);
 
     --clr-lilac-bg: hsl(255, 69%, 90%);
     --clr-lilac-dark: hsl(254, 100%, 89%);
     --clr-lilac-dark-button: hsl(254, 78%, 75%);
     --clr-lilac-dark-blur: hsl(255, 100%, 88%, .9);
+    --clr-lilac-blog: #9d73f2;
+    --clr-lilac-blog-dark: hsl(260, 45%, 47%);
 
     --clr-green-bg: hsl(151, 74%, 88%);
 
