--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -9,7 +9,7 @@
     background-color:var( --clr-lilac-bg);
     background-repeat:no-repeat;
     /*PNG from https://icons8.com/*/
-    background-image:url(../../images/cloudsssssssss500.png);
+    background-image:url(../../images/clouds-img.svg);
     background-repeat:repeat-x;
     animation: movement 60s linear infinite; 
 
