--- a/scss/globals/_boilerplate.scss
+++ b/scss/globals/_boilerplate.scss
@@ -9,16 +9,18 @@
 body {
     margin: 0;
     padding: 0;
-    line-height: 1.6;
-    letter-spacing: .5px;
+    line-height: 1.7;
+    letter-spacing: .3px;
     overflow-x: hidden;
     font-family: var(--public-sans-font);
     color: var(--clr-black-primary);
+    min-height: 100vh;
 }
 
 a,
 .a:visited {
     color: var(--clr-black-primary);
+    cursor: pointer;
 }
 
 
