--- a/scss/layouts/_blog.scss
+++ b/scss/layouts/_blog.scss
@@ -2,7 +2,7 @@
 @use '../globals' as g;
 
 .blog-body {
-    background-color: var(--clr-neutral);
+    background-color: var(--clr-neutral-light);
     
 }
 
@@ -79,7 +79,7 @@ aside {
     padding-right: .7rem;
 
     @include u.breakpoint(medium) {
-        max-width: 85px;
+        max-width: 75px;
     }
 }
 
@@ -94,11 +94,45 @@ aside {
         max-width: 65ch;
         margin-bottom: 0;
     }
+
+    &__title--section {
+        margin-top: 2.5rem;
+        font-size: 1.8rem;
+        line-height: 1.3;
+
+        @include u.breakpoint(medium) {
+            font-size: 2rem;
+        }
+    }
+
+    &-container__img {
+       display: grid;
+       justify-content: left;
+    }
+
+    &__img {
+        margin-top: 1.5rem;
+        max-height: 20rem;
+    }
+
+    &__img--vertical {
+        max-height: 35rem;
+    }
+
+    &-snippet {
+        margin-top: 2rem;
+    }
+
+
+
 }
 
 .text {
     padding: 0;
     margin-top: 2.5rem;
+    border-bottom: 1px solid var(--clr-neutral-medium);
+    padding-bottom: 2.5rem;
+    
 
     &-small {
         font-size: .9rem;
@@ -106,6 +140,11 @@ aside {
         padding: 0;
         font-weight: 700;
     }
+
+    &__paragraph {
+        margin-top: .9rem;
+    }
 }
+
 
 
