--- a/scss/util/_helpers.scss
+++ b/scss/util/_helpers.scss
@@ -14,9 +14,13 @@
 .wrapper {
     max-width: 60rem;
     margin: 0 auto;
-
-    
-        
+     
 }
+
+code {
+    font-weight: 600;
+}
+
+
   
   
