--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
   --clr-pink-dark-button: hsl(0, 73%, 77%);
   --clr-blue-bg: hsl(215, 94%, 86%);
   --clr-blue-dark: hsl(215, 68%, 41%);
+  --clr: rgb(235, 240, 245);
 }
 
 :root {
