--- a/scss/globals/_colors.scss
+++ b/scss/globals/_colors.scss
@@ -8,7 +8,7 @@
     --clr-lilac-bg: hsl(255, 69%, 90%);
     --clr-lilac-dark: hsl(254, 100%, 89%);
     --clr-lilac-dark-button: hsl(254, 78%, 75%);
-    --clr-lilac-dark-blur: hsl(255, 100%, 88%, .9);
+    --clr-lilac-dark-blur: hsla(255, 100%, 88%, 0.9);
     --clr-lilac-blog: hsl(251, 83%, 70%);
     --clr-lilac-blog-dark: hsl(260, 45%, 47%);
 
