--- a/scss/globals/_colors.scss
+++ b/scss/globals/_colors.scss
@@ -20,5 +20,7 @@
     --clr-blue-bg: hsl(215, 94%, 86%);
     --clr-blue-dark: hsl(215, 68%, 41%);
     --clr: rgb(235, 240, 245);
+
+    --clr-note: #fff9d7;
 }
 
