--- a/scss/components/_section.scss
+++ b/scss/components/_section.scss
@@ -39,6 +39,14 @@
         list-style: circle;
     }
 
+    &__link {
+        color: var(--clr-lilac-blog-dark);
+    }
+
+    &__link:hover {
+        text-decoration: underline;
+    }
+
     
     }
 
