--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,8 @@ code {
   font-weight: 400;
   line-height: 1.2;
   padding: 0 15px 0 15px;
+  max-width: 60rem;
+  margin: 0 auto;
 }
 @media (min-width: 48em) {
   .header__title {
@@ -271,9 +273,10 @@ code {
   }
 }
 .header__paragraph {
-  margin-top: 10px;
-  padding: 0 15px 0 15px;
+  padding: 10px 15px 0 15px;
   font-size: 1.1rem;
+  max-width: 60rem;
+  margin: 0 auto;
 }
 @media (min-width: 37em) {
   .header__paragraph {
@@ -339,15 +342,15 @@ code {
 }
 .centered {
   position: absolute;
-  inset: 20% 0 0 29%;
-  margin-top: -30px;
-  margin-left: -100px;
   padding: 1.3rem;
   color: var(--clr-black-primary);
+  width: 100vw;
+  left: 0 !important;
+  right: 0;
 }
 @media (min-width: 87.5em) {
   .centered {
-    inset: 22% 0 0 30%;
+    top: 18%;
   }
 }
 
